--- a/RxTimelane.xcodeproj/xcshareddata/xcschemes/RxTimelane-Package.xcscheme
+++ b/RxTimelane.xcodeproj/xcshareddata/xcschemes/RxTimelane-Package.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1130"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "8E700B9E24093FC500F778D9"
+               BlueprintIdentifier = "RxTimelane::RxTimelane"
                BuildableName = "RxTimelane.framework"
-               BlueprintName = "RxTimelane-iOS"
+               BlueprintName = "RxTimelane"
                ReferencedContainer = "container:RxTimelane.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "RxTimelane::RxTimelaneTests"
+               BuildableName = "RxTimelaneTests.xctest"
+               BlueprintName = "RxTimelaneTests"
+               ReferencedContainer = "container:RxTimelane.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -47,15 +57,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "8E700B9E24093FC500F778D9"
-            BuildableName = "RxTimelane.framework"
-            BlueprintName = "RxTimelane-iOS"
-            ReferencedContainer = "container:RxTimelane.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
